--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,13 +9,17 @@
 <body>
   <div class="container">
     <h1>Welcome AI Alt Generator</h1>
-    <p>Alt tag란? 이미지를 설명하는 텍스트로, 웹 접근성과 SEO에 중요합니다.</p>
+    <p>
+      Alt tag란 이미지를 설명하는 텍스트로, 웹 접근성과 SEO에 꼭 필요합니다.<br>
+      이 도구는 이미지 안의 텍스트(OCR)를 추출하거나, 텍스트가 없으면 이미지를 설명해줍니다.
+    </p>
 
     <input type="file" id="imageInput" accept="image/*">
     <button id="generateBtn">Alt tag 생성</button>
 
     <div id="preview">
       <img id="previewImage" src="" alt="">
+      <p><strong>생성된 Alt 텍스트:</strong></p>
       <p id="altText"></p>
     </div>
   </div>
