--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
     <section class="model-info">
       <h2>사용한 AI 모델</h2>
       <p>
-        이 프로젝트에서는 알리바바 그룹이 개발한 <strong>Qwen2.5-VL-Instruct</strong> 모델을 사용합니다.  
+        이 프로젝트에서는 <strong>알리바바 그룹</strong>이 개발한 <strong>Qwen2.5-VL-Instruct</strong> 모델을 사용합니다.  
         이 모델은 <em>비전-언어 모델(Vision-Language Model, VLM)</em>로, 
         이미지를 이해하고 텍스트를 읽는 능력(OCR)과, 이미지의 장면을 설명하는 능력을 동시에 가지고 있습니다.
         따라서 사진 속 글자를 추출하거나, 텍스트가 없을 경우 장면을 분석해 자연스러운 설명을 생성할 수 있습니다.
