--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>웰컴저축은행 AI 챌린지</title>
+  <title>웰컴금융그룹 AI 프론티어 2차 챌린지</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>웰컴저축은행 AI Alt Generator System</h1>
+    <h1>웰컴금융그룹 AI Alt Generator System</h1>
     <section class="intro">
       <h2>Alt tag란 무엇일까요?</h2>
       <p>
