--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome AI Alt Generator</title>
+  <title>웰컴금융그룹 AI Alt Generator</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -99,7 +99,48 @@
   </style>
 </head>
 <body>
-  <header>📸 Welcome AI Alt Generator</header>
+  <header>📸 웰컴금융그룹 AI Alt Generator</header>
+
+  <!-- Alt tag 필요성 설명 -->
+  <div class="info-box">
+    <h3>Alt tag란 무엇인가요?</h3>
+    <p>
+      Alt tag(대체 텍스트)는 이미지를 설명하는 문구로, 
+      <strong>웹 접근성</strong>과 <strong>검색엔진 최적화(SEO)</strong>에 중요한 역할을 합니다.
+      <br><br>
+      하지만 문제는, <strong>사람이 이미지마다 일일이 Alt tag를 직접 작성하는 것은 매우 번거롭고 시간이 많이 든다</strong>는 점입니다. 
+      이 웹앱은 그 불편함을 해결하기 위해 자동으로 Alt tag를 생성해 줍니다.
+    </p>
+  </div>
+
+  <!-- 동작 방식 + 모델 설명 -->
+  <div class="info-box">
+    <h3>이 웹앱은 어떻게 동작하나요?</h3>
+    <p>
+      사용자가 <strong>이미지를 업로드하면 자동으로 Alt tag가 생성</strong>됩니다.
+      <br><br>
+      동작 과정은 다음과 같습니다:
+    </p>
+    <ol>
+      <li>
+        <strong>텍스트 인식 (OCR)</strong>  
+        → <em>PaddleOCR (korean_PP-OCRv4_mobile)</em>  
+        → <strong>바이두(Baidu) PaddlePaddle 팀</strong> 개발  
+        → 이미지 속 한국어/영문 텍스트를 빠르고 정확하게 추출
+      </li>
+      <li>
+        <strong>이미지 장면 이해 & 설명 생성</strong>  
+        → <em>Qwen2.5-VL-7B-Instruct</em>  
+        → <strong>알리바바 클라우드(Qwen 팀)</strong> 개발  
+        → 이미지 장면과 OCR 텍스트를 결합해 자연스럽고 의미 있는 Alt tag 생성
+      </li>
+    </ol>
+    <p>
+      즉, <strong>OCR + 멀티모달 AI 하이브리드 구조</strong>를 통해  
+      단순히 이미지를 설명하는 것을 넘어서, 실제 이미지 속 텍스트까지 반영한  
+      더 정확하고 풍부한 Alt tag를 제공합니다.
+    </p>
+  </div>
 
   <div class="container">
     <!-- 왼쪽: 업로드 + 이미지 미리보기 -->
