--- a/frontend/index.html
+++ b/frontend/index.html
@@ -112,13 +112,13 @@
       - <strong>웹 접근성</strong>: 시각장애인 사용자는 <u>스크린 리더(Screen Reader)</u>를 통해 Alt tag를 들으며 이미지를 이해합니다.<br>
       - <strong>정보 전달</strong>: 이미지가 로딩되지 않더라도 Alt tag가 대신 표시되어 내용을 알 수 있습니다.<br>
       - <strong>검색엔진 최적화(SEO)</strong>: 검색엔진은 Alt tag를 참고해 이미지를 인덱싱하므로 노출 효과가 좋아집니다.<br>
-      - <strong>사용자 경험 개선</strong>: 블로그·쇼핑몰 등에서 이미지 의미를 정확히 전달할 수 있습니다.<br>
+      - <strong>사용자 경험 개선</strong>: 웰컴금융그룹의 웰컴디지털뱅크, 인터넷뱅킹, 모바일뱅킹 등에서 이미지 의미를 정확히 전달할 수 있습니다.<br>
       <br>
       하지만 현실적으로 <strong>사람이 이미지마다 일일이 Alt tag를 직접 작성하는 것은 번거롭고 시간이 많이 걸립니다.</strong>  
       그래서 많은 사이트에서 Alt tag가 비어 있거나 대충 작성되는 경우가 많습니다.
       <br><br>
       👉 <strong>이 웹앱은 AI를 활용해 이미지를 업로드하면 자동으로 Alt tag를 생성</strong>합니다.  
-      이미지 속 <u>텍스트를 읽어내는 OCR</u>과 <u>이미지를 이해하는 멀티모달 AI</u>를 결합한 하이브리드 방식 덕분에,  
+      <u>이미지를 이해하는 멀티모달 AI</u> 방식 덕분에,  
       단순한 이미지 설명이 아니라 <strong>실제 장면 + 텍스트까지 반영된 정확하고 풍부한 Alt tag</strong>를 제공합니다.
     </p>
   </div>
@@ -131,24 +131,12 @@
       <br><br>
       동작 과정은 다음과 같습니다:
     </p>
-    <ol>
-      <li>
-        <strong>텍스트 인식 (OCR)</strong>  
-        → <em>PaddleOCR (korean_PP-OCRv4_mobile)</em>  
-        → <strong>바이두(Baidu) PaddlePaddle 팀</strong> 개발  
-        → 이미지 속 한국어/영문 텍스트를 빠르고 정확하게 추출
-      </li>
-      <li>
-        <strong>이미지 장면 이해 & 설명 생성</strong>  
-        → <em>Qwen2.5-VL-7B-Instruct</em>  
-        → <strong>알리바바 클라우드(Qwen 팀)</strong> 개발  
-        → 이미지 장면과 OCR 텍스트를 결합해 자연스럽고 의미 있는 Alt tag 생성
-      </li>
-    </ol>
     <p>
-      즉, <strong>OCR + 멀티모달 AI 하이브리드 구조</strong>를 통해  
-      단순히 이미지를 설명하는 것을 넘어서, 실제 이미지 속 텍스트까지 반영한  
-      더 정확하고 풍부한 Alt tag를 제공합니다.
+      이 서비스는 <strong>알리바바 클라우드(Qwen 팀)</strong> 개발한 <strong>Qwen2.5-VL</strong> 멀티모달 AI 모델을 사용합니다.<br>
+      별도의 OCR 단계를 거치지 않고, <strong>이미지 안의 글자와 장면을 동시에 인식</strong>하여 
+      100자 내외의 Alt tag를 자동으로 생성합니다.<br><br>
+      사용자는 단순히 이미지를 업로드하기만 하면 되며, 
+      Alt tag 작성의 번거로움을 크게 줄여줍니다.
     </p>
   </div>
 
@@ -169,9 +157,6 @@
         <textarea id="altText" readonly></textarea>
         <button class="copy-btn" onclick="copyAlt()">복사하기</button>
       </div>
-
-      <h3>OCR 추출 텍스트</h3>
-      <div id="ocrText" class="ocr-box">이미지 업로드 후 표시됩니다.</div>
     </div>
   </div>
 
@@ -179,7 +164,6 @@
     const fileInput = document.getElementById("fileInput");
     const preview = document.getElementById("preview");
     const altText = document.getElementById("altText");
-    const ocrTextDiv = document.getElementById("ocrText");
 
     fileInput.addEventListener("change", async (e) => {
       const file = e.target.files[0];
@@ -195,7 +179,6 @@
         formData.append("image", file);
 
         altText.value = "⏳ Alt tag 생성 중...";
-        ocrTextDiv.innerText = "⏳ OCR 텍스트 추출 중...";
 
         try {
           const res = await fetch("https://welcome-ai-alt-generator-backend.onrender.com/api/generate-alt", {
@@ -205,14 +188,8 @@
           const data = await res.json();
 
           altText.value = data.altTag || "Alt tag 생성 실패";
-          if (data.ocrTexts && data.ocrTexts.length > 0) {
-            ocrTextDiv.innerText = data.ocrTexts.join("\n");
-          } else {
-            ocrTextDiv.innerText = "텍스트가 감지되지 않았습니다.";
-          }
         } catch (err) {
           altText.value = "❌ Alt tag 생성 오류";
-          ocrTextDiv.innerText = "❌ OCR 오류";
           console.error(err);
         }
       }
