--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,8 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>웰컴금융그룹 AI Alt Generator</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Welcome AI Alt Generator</title>
   <style>
     body {
       font-family: Arial, sans-serif;
