--- a/frontend/index.html
+++ b/frontend/index.html
@@ -114,19 +114,41 @@
   <div class="info-box">
     <h3>Alt tag란 무엇인가요?</h3>
     <p>
-      Alt tag(대체 텍스트)는 <strong>이미지에 붙이는 설명 글</strong>로, 
+      Alt tag(대체 텍스트)는 <strong>이미지에 붙이는 설명 글</strong>로,  
       눈으로 이미지를 볼 수 없는 사용자나 검색엔진이 이미지의 의미를 이해할 수 있도록 도와줍니다.
-      <br><br>
+    </p>
+    <p>
       📌 <strong>왜 Alt tag가 필요할까요?</strong><br>
       - <strong>웹 접근성</strong>: 시각장애인 사용자는 <u>스크린 리더(Screen Reader)</u>를 통해 Alt tag를 들으며 이미지를 이해합니다.<br>
       - <strong>정보 전달</strong>: 이미지가 로딩되지 않더라도 Alt tag가 대신 표시되어 내용을 알 수 있습니다.<br>
       - <strong>검색엔진 최적화(SEO)</strong>: 검색엔진은 Alt tag를 참고해 이미지를 인덱싱하므로 노출 효과가 좋아집니다.<br>
-      - <strong>사용자 경험 개선</strong>: 웰컴디지털뱅크·인터넷/모바일뱅킹 등에서 이미지 의미를 정확히 전달할 수 있습니다.<br>
-      <br>
-      하지만 현실적으로 <strong>사람이 이미지마다 Alt tag를 직접 작성하는 것은 번거롭고 시간이 많이 듭니다.</strong>
-      <br><br>
-      👉 이 웹앱은 <strong>Qwen2.5-VL 멀티모달 AI</strong> 하나로
-      <u>이미지 속 글자와 장면을 동시에 인식</u>해 100자 내외 Alt tag를 자동 생성합니다.
+      - <strong>사용자 경험 개선</strong>: 웰컴금융그룹의 웰컴디지털뱅크, 인터넷뱅킹, 모바일뱅킹 등에서 이미지 의미를 정확히 전달할 수 있습니다.<br>
+    </p>
+    <p>
+      하지만 현실적으로 <strong>사람이 이미지마다 일일이 Alt tag를 직접 작성하는 것은 번거롭고 시간이 많이 걸립니다.</strong>  
+      그래서 많은 사이트에서 Alt tag가 비어 있거나 대충 작성되는 경우가 많습니다.
+    </p>
+    <p>
+      👉 <strong>이 웹앱은 AI를 활용해 이미지를 업로드하면 자동으로 Alt tag를 생성</strong>합니다.  
+      <u>이미지를 이해하는 멀티모달 AI</u> 방식 덕분에,  
+      단순한 이미지 설명이 아니라 <strong>실제 장면 + 텍스트까지 반영된 정확하고 풍부한 Alt tag</strong>를 제공합니다.
+    </p>
+  </div>
+
+  <div class="info-box">
+    <h3>이 웹앱은 어떻게 동작하나요?</h3>
+    <p>
+      사용자가 <strong>이미지를 업로드하면 자동으로 Alt tag가 생성</strong>됩니다.
+    </p>
+    <p>
+      이 서비스는 <strong>알리바바 클라우드(Qwen 팀)</strong>이 개발한  
+      <strong>Qwen2.5-VL 멀티모달 AI 모델</strong>을 사용합니다.<br>
+      별도의 OCR 단계를 거치지 않고, <strong>이미지 안의 글자와 장면을 동시에 인식</strong>하여  
+      100자 내외의 Alt tag를 자동으로 생성합니다.
+    </p>
+    <p>
+      사용자는 단순히 이미지를 업로드하기만 하면 되며,  
+      Alt tag 작성의 번거로움을 크게 줄여줍니다.
     </p>
   </div>
 
